src/styles/base/layout.scss
html {
  padding:0;
  margin:0;
  background: linear-gradient(to left top,$cornSilk,$cornSilk,$peach) fixed;
  min-height: 100%;
  background-repeat:no-repeat;
}

body{
  min-height: 100vh;
}

button {
  font-size: 15px;
  font-family: 'Swear Display';
  font-weight: bold;
  border: none; 
  background-color: transparent;
}

svg {
  margin:0;
  padding:0;
}

p {
  font-family: 'Montserrat';
  margin: 5px;
  color:$kombuGreen;
}

a {
  font-family: 'Montserrat';
  font-size: 15;
  font-weight: bold;
  color:$kombuGreen;
}

h1 {
  margin: 0px;
  color: $kombuGreen;
  font-family: 'Swear Display';
}

h2 {
  font-family: 'Swear Display';
  font-style: italic;
  font-size: 30px;
  color: $kombuGreen;
  margin-bottom: 10px;
}

h3 {
  font-family: 'Swear Display';
  color: $kombuGreen; 
}

#linkdin, #github {
  width:40px;
  height: 40px;
}

#resume {
  width: 85px;
  height: 85px;
  margin-bottom: -4px;
}

.social {
  position:absolute; 
  z-index: 2;
  left: 20px; 
  bottom: 0px;
  margin: 0;
}

.main-content{
  margin-top: -70px;
  min-height: 100vh;
  display: flex;
  justify-content: space-evenly;
  padding:0;
}

@media only screen and (max-width: 1000px) {
   body {
      margin: 5%;
      padding: 0;
   }
   .main-content {
     flex-direction: column;
     margin-top: -80px;
    }

    .introBox2 {
      position:relative; 
      left: 50px; 
      bottom: 50px;
      margin: 0;
      z-index: -1;
    }
}

